fix: fix about section mobile & tablet style

--- a/_sass/2-layouts/_index.scss
+++ b/_sass/2-layouts/_index.scss
@@ -111,9 +111,10 @@
     &-about{
         text-align: left;
         margin-right: $gutter-small;
+        min-width: 50%;
     }
-    &-info{
-        min-width: fit-content;
+    &-infos{
+        min-width: 50%;
     }
     &-header {
         position: relative;
